--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,8 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
+  "background": {
+    "service_worker": "background.js"
+  },
   "permissions": ["storage", "activeTab", "scripting"]
 }
